--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/a.svg" />
+    <meta name="description" content="Esta es la pagina principal del convertidor" />
     <meta name="google-site-verification" content="1DXiHUZY1z8qRNtfBUoZfKH30ME1s6Mz0oPaCK3VYgU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Convertidor de texto</title>
